--- a/ReleaseNotes/Release Note v2.6
+++ b/ReleaseNotes/Release Note v2.6
@@ -1,22 +1,22 @@
-#Releasenotes ePROM v.2.6
+* Releasenotes ePROM v.2.6
 Releasedato: 12.12.2019
 
 Nyheter 
 
 ePROM
-•	Forhåndsvisning av brev i helsenorge.no og digipost gjøres tilgjenglig fra enheter utenfor helsenettet
-•	Forhåndsvisning av skjema i ePROM gjøres tilgjenglig fra enheter utenfor helsenettet
-•	Forhåndsvisning av skjema på mobil gjøres responsive
-•	Spesifisere avsender i Skjemaoppgave-melding som sendes til helsenorge.no og Digipost. NB! Vil først ha effekt når helsenorge.no og Digipost endrer sine system
-•	Mulighet for å tilpasse innhold i varsling pr. SMS/epost og brev fra helsenorge.no og Digipost 
-•	Støtte for utsending av fysiske brev til innbygger via Digipost hvis mottaker ikke er på helsenorge.no  eller ikke har sikker digital post (Digipost eller eBOX) 
-•	Innføre kryptering av metadata, samt kryptering av metadata som sendes med bestillingen
-•	Bedre tilbakemelding ved bestilling og feil i metadata
+1 Forhåndsvisning av brev i helsenorge.no og digipost gjøres tilgjenglig fra enheter utenfor helsenettet
+1 Forhåndsvisning av skjema i ePROM gjøres tilgjenglig fra enheter utenfor helsenettet
+1 Forhåndsvisning av skjema på mobil gjøres responsive
+1 Spesifisere avsender i Skjemaoppgave-melding som sendes til helsenorge.no og Digipost. NB! Vil først ha effekt når helsenorge.no og Digipost endrer sine system
+1	Mulighet for å tilpasse innhold i varsling pr. SMS/epost og brev fra helsenorge.no og Digipost 
+1	Støtte for utsending av fysiske brev til innbygger via Digipost hvis mottaker ikke er på helsenorge.no  eller ikke har sikker digital post (Digipost eller eBOX) 
+1 Innføre kryptering av metadata, samt kryptering av metadata som sendes med bestillingen
+1	Bedre tilbakemelding ved bestilling og feil i metadata
 
 ePROM Skjemabygger
-•	Sortering av svaralternativer
-•	Støtte for klokkeslett på datofelt
-•	Legge inn validering av dato og tallfelt 
+1	Sortering av svaralternativer
+1	Støtte for klokkeslett på datofelt
+1	Legge inn validering av dato og tallfelt 
 
 ePROM Admin
-•	Muliggjør at man kan skjule progressbar ved oppretting av skjema i eFORSK
+1	Muliggjør at man kan skjule progressbar ved oppretting av skjema i eFORSK
